--- a/static/main.css
+++ b/static/main.css
@@ -19,6 +19,11 @@ textarea {
 	max-width: calc(100% - 8px);
 }
 
+#submit {
+	/* Pretty spinner. */
+	font-family: monospace;
+}
+
 textarea {
 	width: 50em;
 	height: 20em;
